# readers_writers_test

./: CMakeLists.txt  README.md
src/: config.h  main.cpp
src/gui/: SimpleWindow.cpp  SimpleWindow.h
src/model/: Color.cpp  Color.h  ColorSqMatrixObservable.cpp  ColorSqMatrixObservable.h  ColorSquareMatrix.cpp  ColorSquareMatrix.h  ColorSqureMatrix.cpp  ColorSqureMatrix.h  PaintReader.cpp  PaintReader.h  PaintWriter.cpp  PaintWriter.h  TrickySquarePainter.cpp  TrickySquarePainter.h  Worker.h
src/threads/: threads.h  win_threads.cpp
src/util/: Observable.h  Observer.h
